Closed Bug 1346098 Opened 7 years ago Closed 7 years ago

Don't export IntlUtils without ICU

Categories

(Core :: Internationalization, defect)

Unspecified
Android
defect
Not set
normal

Tracking

()

RESOLVED FIXED
mozilla55
Tracking Status
firefox54 --- fixed
firefox55 --- fixed

People

(Reporter: m_kato, Assigned: m_kato)

References

Details

Attachments

(1 file)

Bug 1341994 uses mozIMozIntl interface, but we have to support non-INTL_API on Android as official.
Assignee: nobody → m_kato
(Since Fennec/Android uses native date time picker, IntlUtils won;t be used on Fennec/Android even if Intl API is turned on)
But the code for them will not be available since mozIMozIntl relies on ICU for 100% of its functionality.

Wouldn't it make more sense to disable Bug 1341994 code on Android?
(In reply to Zibi Braniecki [:gandalf][:zibi] from comment #2)
> But the code for them will not be available since mozIMozIntl relies on ICU
> for 100% of its functionality.
> 
> Wouldn't it make more sense to disable Bug 1341994 code on Android?

OK, but we need a lot of ifdef into dom
Summary: Export mozIMozIntl.idl and mozIMozIntlHelper even if ENABLE_INTL_API is tuned off → Don't export IntlUtils without ICU
Blocks: 1343725
Comment on attachment 8845800 [details]
Bug 1346098 - Don't expose intlUtils without ENABLE_INTL_API.

https://reviewboard.mozilla.org/r/118974/#review120998

I guess this is fine. ( Really need to figure out how to have ICU on Android. )
Attachment #8845800 - Flags: review?(bugs) → review+
Pushed by m_kato@ga2.so-net.ne.jp:
https://hg.mozilla.org/integration/autoland/rev/d2ed3ad38c26
Don't expose intlUtils without ENABLE_INTL_API. r=smaug
https://hg.mozilla.org/mozilla-central/rev/d2ed3ad38c26
Status: NEW → RESOLVED
Closed: 7 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla55
Comment on attachment 8845800 [details]
Bug 1346098 - Don't expose intlUtils without ENABLE_INTL_API.

Approval Request Comment
[Feature/Bug causing the regression]:
bug 1343725 and bug 1341994

[User impact if declined]:
We cannot release Firefox for android on beta and release channel since we cannot build Fennec on beta/release builder.

:snorp and :blassey decides that we still keep turning off Intl API and ICU on Fennec beta/release channel.  So we require this fix to build Fennec on release and beta channel.

[Is this code covered by automated tests?]:
No, but this is build only issue

[Has the fix been verified in Nightly?]:
Yes

[Needs manual test from QE? If yes, steps to reproduce]: 
No, this is build issue.

[List of other uplifts needed for the feature/fix]:
Nothing.

[Is the change risky?]:
No

[Why is the change risky/not risky?]:
This is build issue only.

[String changes made/needed]:
No
Attachment #8845800 - Flags: approval-mozilla-aurora?
Comment on attachment 8845800 [details]
Bug 1346098 - Don't expose intlUtils without ENABLE_INTL_API.

This patch supports turning off Intl API and ICU on Fennec beta/release channel. Aurora54+.
Attachment #8845800 - Flags: approval-mozilla-aurora? → approval-mozilla-aurora+
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: