Bug 1346098 - Don't expose intlUtils without ENABLE_INTL_API. r=smaug

Fennec team decides that Fennec will turn off ICU support on release build now.  So we need to able be build Firefox without ENABLE_INTL_API (Bug 1343725).
Bug 1341994 uses mozIMozIntl interface, but it is only defined with ENABLE_INTL_API.  So we shouldn't expose intlUtils if ICU is turned off.

MozReview-Commit-ID: EiQKiF4BRQv